Ferdig med header, alt fungerer som det skal!

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <!--Hovedmeny linker til undersider-->
             
             <ul class="meny" id="alleMenyBarn">
-                <li><a class="active" href="hjem.html">HJEM</a></li>
-                <li><a href="lonningsdag.html">LØNNINGSDAG</a></li>
-                <li><a href="femtilappen.html">50-LAPPEN</a></li>
-                <li><a href="gratis.html">GRATIS</a></li>
+                <li><a class="active" href="hjem.html">HJEM</a></li><!--
+                --><li><a href="lonningsdag.html">LØNNINGSDAG</a></li><!--
+                --><li><a href="femtilappen.html">50-LAPPEN</a></li><!--
+                --><li><a href="gratis.html">GRATIS</a></li>
              </ul>
 
    <div id="map_canvas"></div>
