la til footer og 50-lappen

--- a/HTML/lonningsdag.html
+++ b/HTML/lonningsdag.html
@@ -54,6 +54,10 @@
     <p class="subText">Ting man kan gjøre uka man får</p>
     <p class="mainText">UTBETALING!</p>
         </div>
+        
+    <footer>
+        <p>Webprosjekt Gruppe 8, Copyright &copy; 2017</p>
+    </footer>
 
     </body>
 </html>
