--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
     
 
         <!-- Slutt linker Hovedmeny--> 
-
+    <footer>
+        <p>Webprosjekt Gruppe 8, Copyright &copy; 2017</p>
+    </footer>
 
     </body>
 </html>
