--- a/HTML/femtilappen.html
+++ b/HTML/femtilappen.html
@@ -50,7 +50,38 @@
     
 
         <!-- Slutt linker Hovedmeny--> 
+    <div id="Redbox">
+        <p class="subText">CHALLENGE:</p>
+        <p class="mainText">50-LAPPEN</p>  
+    </div>
+        
+    <section id="winPrize">
+            <h4>Vinn kaffekort!</h4>
+            <p>Hva kan man gjøre med 50-lapp? Last opp ditt forslag til .... (NEI takk, vi vil ikke se penisen din pakket inn i en). Det mest fantasifulle og morsomme bidraget vinner et kaffekort fra kantina. Vi trekker én vinner den 10. hver måned - når lommeboken blabla er tom...</p>
+    </section>
 
+    <section id="boxes">
+            <div class="box">
+                <img src="http://placehold.it/160.png">
+                <h6>Tittel</h6>
+            </div>
+            <div class="box">
+                <img src="http://placehold.it/160.png">
+                <h6>Tittel</h6>
+            </div>
+            <div class="box">
+                <img src="http://placehold.it/160.png">
+                <h6>Tittel</h6>
+            </div>
+            <div class="box">
+                <img src="http://placehold.it/160.png">
+                <h6>Tittel</h6>
+            </div>
+            <div class="box">
+                <img src="http://placehold.it/160.png">
+                <h6>Tittel</h6>
+            </div>
+    </section>
 
     </body>
 </html>
