--- a/HTML/gratis.html
+++ b/HTML/gratis.html
@@ -54,6 +54,10 @@
     <p class="subText">Ting du kan gjøre helt</p>
     <p class="mainText">GRATIS</p>  
         </div>
+        
+    <footer>
+        <p>Webprosjekt Gruppe 8, Copyright &copy; 2017</p>
+    </footer>
 
     </body>
 </html>
