Fikset feil med footer på 50-lappen

--- a/HTML/femtilappen.html
+++ b/HTML/femtilappen.html
@@ -81,7 +81,23 @@
                 <img src="http://placehold.it/160.png">
                 <h6>Tittel</h6>
             </div>
+            <div class="box">
+                <img src="http://placehold.it/160.png">
+                <h6>Tittel</h6>
+            </div>
+            <div class="box">
+                <img src="http://placehold.it/160.png">
+                <h6>Tittel</h6>
+            </div>
+            <div class="box">
+                <img src="http://placehold.it/160.png">
+                <h6>Tittel</h6>
+            </div>
     </section>
+        
+    <footer>
+        <p>Webprosjekt Gruppe 8, Copyright &copy; 2017</p>
+    </footer>
 
     </body>
 </html>
