La til alt innhold til lønningsdag og gratis

--- a/HTML/lonningsdag.html
+++ b/HTML/lonningsdag.html
@@ -9,7 +9,7 @@
 <meta name="author" content="">
 
     <title>Campus Vulkan</title>
-    <link rel="stylesheet" type="text/css" href="../CSS/lonningsdag.css">
+    <link rel="stylesheet" type="text/css" href="/CSS/campusVulkan.css">
     
 </head>
 
